# push_swap_emulator

./: .gitignore  README.md  pyproject.toml
emulator/: emulator.py  swapper.py
pushswapemulator/: __main__.py  swapper.py  utils.py
